fix: Prevent items in score panel from jumping

--- a/css/app.css
+++ b/css/app.css
@@ -101,6 +101,10 @@ h2 {
     justify-content: space-between;
 }
 
+.score-panel .scoring {
+    width: 140px;
+}
+
 .score-panel .stars {
     margin: 0;
     padding: 0;
